<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tarea04</string>
    <string name="titulo">¡Bienvenido!</string>
    <string name="instrucciones">Ingrese sus datos</string>
    <string name="feedbacktype">Seleccione una</string>
    <string name="feedbacktype1">Pollo</string>
    <string name="feedbacktype2">Carne</string>
    <string name="feedbacktype3">Vegana</string>
    <string name="feedbacktype4">Pastor</string>
    <string name="prepara_tu_hamburguesa">¡Prepara tu hamburguesa!</string>
    <string name="escriba_su_nombre">Escriba su nombre</string>
    <string name="escriba_su_email">Escriba su email</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento:</string>
    <string name="contrase_a">Contraseña</string>
    <string name="confirme_su_contrase_a">Confirme su contraseña</string>
    <string name="acepto_los_t_rminos_y_condiciones">Acepto los términos y condiciones</string>
    <string name="regresar">Regresar</string>
    <string name="enviar_datos">Enviar Datos</string>




    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="usuario">Usuario:</string>
    <string name="contra">Contraseña:</string>
    <string name="recordar_sesion">Recordar sesión</string>
    <string name="registro_usuario">Registrar usuario</string>
    <string name="iniciar">Continuar</string>
    <string name="tipo_sesion">Ingresar como:</string>
    <string name="espectador">Espectador</string>
    <string name="transmision">de transmisión</string>
    <string name="explorador">Explorador</string>
    <string name="cartelera">de cartelera</string>
    <string name="nombre">CineFC</string>

    <string name="titulo_cartelera">Cartelera de la semana</string>
    <string name="titulo_pelicula">Película: %s</string>

    <string name="accion_info">Información de aplicación</string>
    <string name="accion_notif">Notificaciones</string>
    <string name="accion_agendar">Agendar película</string>
    <string name="accion_buscar_mensaje">Seleccionaste buscar película</string>
    <string name="accion_horarios_mensaje">Seleccionaste horarios</string>
    <string name="accion_info_mensaje">Seleccionaste información de la aplicación</string>
    <string name="accion_notif_mensaje">Seleccionaste notificaciones</string>
    <string name="accion_agendar_mensaje">Seleccionaste agendar película</string>

    <string name="accion_botana">Botana</string>
    <string name="accion_bebidas">Bebidas</string>
    <string name="accion_ubicacion">Ubicación</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="accion_botana_mensaje">Seleccionaste botana</string>
    <string name="accion_bebidas_mensaje">Seleccionaste bebidas</string>
    <string name="accion_ubicacion_mensaje">Seleccionaste ubicación</string>


</resources>
