<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.droidcafe.MainActivity">
    <item
        android:id="@+id/accion_notif"
        android:orderInCategory="40"
        android:title="@string/accion_notif"
        app:showAsAction="never" />

    <item
        android:id="@+id/accion_agendar"
        android:orderInCategory="40"
        android:title="@string/accion_agendar"
        app:showAsAction="never" />

    <item
        android:id="@+id/buscar"
        android:orderInCategory="10"
        android:title="@string/nombre"
        android:icon="@drawable/search"
        app:showAsAction="always" />
    <item
        android:id="@+id/horarios"
        android:orderInCategory="20"
        android:title="@string/accion_horarios_mensaje"
        android:icon="@drawable/calendar"
        app:showAsAction="always" />
    <item
        android:id="@+id/accion_info"
        android:orderInCategory="100"
        android:icon="@drawable/information"
        android:title="@string/accion_info"
        app:showAsAction="ifRoom" />
</menu>