<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/beige">

                <TableLayout
                    android:id="@+id/tabla"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/iniciar_sesion"
                        android:textSize="20sp"
                        android:background="@color/orange"
                        android:textColor="@color/white"/>

                    <TableRow android:layout_gravity="center">

                        <Space android:layout_width="20dp" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/usuario" />

                        <EditText
                            android:id="@+id/usuario"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:maxWidth="200dp" />

                    </TableRow>

                    <TableRow android:layout_gravity="center_horizontal">

                        <Space android:layout_width="match_parent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/contra" />

                        <EditText
                            android:id="@+id/contra"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:maxWidth="200dp"/>

                    </TableRow>

                    <TableRow android:layout_gravity="center_horizontal">

                        <TextView
                            android:layout_column="1"
                            android:text="@string/tipo_sesion"/>

                        <RadioGroup android:layout_width="103dp">

                            <RadioButton
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/espectador" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="start"
                                android:layout_marginStart="30dp"
                                android:text="@string/transmision" />

                            <RadioButton
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/explorador" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="start"
                                android:layout_marginStart="30dp"
                                android:text="@string/cartelera" />
                        </RadioGroup>

                    </TableRow>

                    <TableRow android:layout_gravity="center_horizontal">

                        <CheckBox
                            android:layout_column="2"
                            android:text="@string/recordar_sesion" />

                    </TableRow>

                    <TableRow android:layout_gravity="center_horizontal">

                        <TextView
                            android:layout_column="1"
                            android:text="@string/registro_usuario"
                            android:textColor="@color/blue"
                            android:textIsSelectable="true"/>

                    </TableRow>

                </TableLayout>

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tabla"
                    android:layout_alignEnd="@id/tabla"
                    android:layout_marginEnd="20dp"
                    android:text="@string/iniciar" />

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/button"
                    android:layout_alignEnd="@id/tabla"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/button"
                    android:layout_toStartOf="@id/logo"
                    android:text="@string/nombre"
                    android:gravity="center_vertical"
                    android:textSize="35sp"/>

    </RelativeLayout>
</ScrollView>